--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "fumadocs-twoslash": "^3.1.0",
     "fumadocs-ui": "^15.3.1",
     "katex": "0.16.21",
+    "lenis": "^1.3.3",
     "lucide-react": "^0.477.0",
     "motion": "^12.6.2",
     "next": "^15.2.4",
@@ -78,6 +79,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "tempus": "1.0.0-dev.11",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.24.2"
   },
