--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "^0.0.34",
     "@shikijs/transformers": "^3.2.1",
+    "@t3-oss/env-core": "^0.13.4",
     "@t3-oss/env-nextjs": "^0.12.0",
     "better-auth": "^1.2.5",
     "class-variance-authority": "^0.7.1",
