--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "next-themes": "0.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.55.0",
     "react-wrap-balancer": "^1.1.1",
     "rehype-katex": "7.0.1",
