--- a/package.json
+++ b/package.json
@@ -61,12 +61,12 @@
     "lenis": "^1.3.3",
     "lucide-react": "^0.477.0",
     "motion": "^12.6.2",
-    "next": "^15.3.2",
+    "next": "16.1.1",
     "next-safe-action": "^7.10.4",
     "next-sitemap": "4.2.3",
     "next-themes": "0.4.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.55.0",
     "react-wrap-balancer": "^1.1.1",
@@ -90,10 +90,12 @@
     "@tailwindcss/postcss": "4.0.4",
     "@types/mdx": "2.0.13",
     "@types/node": "22.13.1",
-    "@types/react": "19.1.4",
-    "@types/react-dom": "19.1.5",
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
     "@types/rss": "^0.0.32",
     "drizzle-kit": "^0.30.6",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.1",
     "fast-glob": "^3.3.3",
     "gray-matter": "^4.0.3",
     "next-validate-link": "^1.5.2",
@@ -106,5 +108,11 @@
   "ct3aMetadata": {
     "initVersion": "7.39.0"
   },
-  "packageManager": "pnpm@10.7.0"
+  "packageManager": "pnpm@10.7.0",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.8",
+      "@types/react-dom": "19.2.3"
+    }
+  }
 }
