Refactor OG image generation for blog and work routes, update metadata handling, and improve layout components
- Replaced old OG image generation logic with new ImageResponse implementation in blog and work routes.
- Updated metadata functions to utilize shared layout configuration.
- Refactored DocsLayout to use Fumadocs layout components and improved type handling.
- Enhanced header components with new link item structure and search functionality.
- Introduced environment variable management with zod validation.
- Cleaned up constants and metadata handling for better maintainability.
- Updated validators for contact and newsletter forms to improve error messaging.
- Adjusted TypeScript configuration for better module resolution.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,7 +1,11 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "organizeImports": {
-    "enabled": true
+  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
   },
   "vcs": {
     "enabled": true,
@@ -9,7 +13,13 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignore": ["node_modules", ".next", ".source"]
+    "includes": [
+      "**",
+      "!**/node_modules",
+      "!**/.next",
+      "!**/.source",
+      "!**/.compare"
+    ]
   },
   "formatter": {
     "enabled": true,
@@ -23,6 +33,11 @@
       "quoteStyle": "single",
       "jsxQuoteStyle": "single",
       "semicolons": "always"
+    }
+  },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
     }
   },
   "linter": {
