--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,9 @@
       ],
       "@/public/*": [
         "./public/*"
+      ],
+      "fumadocs-mdx:collections/*": [
+        "./.source/*"
       ]
     }
   },
