--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
     "postbuild": "next-sitemap --config next-sitemap.config.cjs",
     "dev": "next dev",
     "start": "next start",
-    "format": "biome format --write .",
-    "lint": "tsx ./scripts/lint.mts && biome lint .",
-    "lint:write": "biome lint --write .",
-    "lint:unsafe": "biome lint --write --unsafe .",
     "check": "biome check .",
     "check:unsafe": "biome check --write --unsafe .",
     "check:write": "biome check --write .",
+    "check:links": "tsx ./scripts/lint.mts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "email:build": "email build",
     "email:dev": "email dev -p 3001",
-    "email:export": "email export"
+    "email:export": "email export",
+    "typegen": "fumadocs-mdx && next typegen",
+    "typecheck": "pnpm run typegen && tsc --noEmit"
   },
   "dependencies": {
-    "@bprogress/next": "^3.2.11",
+    "@bprogress/next": "^3.2.12",
     "@fuma-comment/react": "^1.2.2",
     "@fuma-comment/server": "^1.2.1",
     "@hookform/resolvers": "^4.1.3",
@@ -42,29 +41,32 @@
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "^0.0.34",
-    "@shikijs/transformers": "^3.2.1",
-    "@t3-oss/env-core": "^0.13.4",
-    "@t3-oss/env-nextjs": "^0.12.0",
+    "@shikijs/transformers": "3.19.0",
+    "@t3-oss/env-nextjs": "^0.13.10",
+    "@takumi-rs/image-response": "^0.57.6",
     "better-auth": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
-    "feed": "^4.2.2",
-    "fumadocs-core": "^15.2.0",
+    "feed": "5.1.0",
+    "fumadocs-core": "16.2.4",
     "fumadocs-docgen": "^2.0.0",
-    "fumadocs-mdx": "^11.5.7",
-    "fumadocs-twoslash": "^3.1.0",
-    "fumadocs-ui": "^15.3.1",
-    "katex": "0.16.21",
+    "fumadocs-mdx": "14.1.0",
+    "fumadocs-twoslash": "3.1.10",
+    "fumadocs-typescript": "4.0.14",
+    "fumadocs-ui": "16.2.4",
+    "hast": "1.0.0",
+    "jiti": "^2.6.1",
+    "katex": "0.16.27",
     "lenis": "^1.3.3",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "0.560.0",
     "motion": "^12.6.2",
     "next": "16.1.1",
     "next-safe-action": "^7.10.4",
     "next-sitemap": "4.2.3",
-    "next-themes": "0.4.4",
+    "next-themes": "0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-fast-marquee": "^1.6.5",
@@ -76,43 +78,40 @@
     "remark-mdx": "^3.1.0",
     "resend": "^4.2.0",
     "schema-dts": "^1.1.5",
-    "shiki": "^3.2.1",
+    "shiki": "3.19.0",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tempus": "1.0.0-dev.11",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.24.2"
+    "zod": "4.1.13"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@tailwindcss/postcss": "4.0.4",
+    "@biomejs/biome": "2.3.8",
+    "@next/bundle-analyzer": "^16.1.1",
+    "@tailwindcss/postcss": "4.1.18",
     "@types/mdx": "2.0.13",
-    "@types/node": "22.13.1",
-    "@types/react": "19.2.8",
-    "@types/react-dom": "19.2.3",
+    "@types/node": "25.0.1",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@types/rss": "^0.0.32",
     "drizzle-kit": "^0.30.6",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "16.1.1",
     "fast-glob": "^3.3.3",
     "gray-matter": "^4.0.3",
-    "next-validate-link": "^1.5.2",
-    "postcss": "8.5.1",
+    "next-validate-link": "^1.6.4",
+    "postcss": "8.5.6",
     "react-email": "^4.0.2",
-    "tailwindcss": "4.0.4",
+    "tailwindcss": "4.1.18",
     "tsx": "^4.19.3",
-    "typescript": "5.7.3"
+    "typescript": "5.9.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.0"
   },
   "packageManager": "pnpm@10.7.0",
-  "pnpm": {
-    "overrides": {
-      "@types/react": "19.2.8",
-      "@types/react-dom": "19.2.3"
-    }
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
