--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "email:dev": "email dev -p 3001",
     "email:export": "email export",
     "typegen": "fumadocs-mdx && next typegen",
-    "typecheck": "pnpm run typegen && tsc --noEmit"
+    "typecheck": "pnpm run typegen && tsc --noEmit",
+    "check:spelling": "cspell -c .cspell.jsonc --no-progress --no-summary --no-must-find-files --unique --cache"
   },
   "dependencies": {
     "@bprogress/next": "^3.2.12",
@@ -89,6 +90,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
+    "@commitlint/types": "^20.2.0",
+    "@cspell/dict-bash": "^4.2.2",
+    "cspell": "^9.4.0",
+    "lefthook": "^2.0.8",
     "@next/bundle-analyzer": "^16.1.1",
     "@tailwindcss/postcss": "4.1.18",
     "@types/mdx": "2.0.13",
