--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "postbuild": "next-sitemap --config next-sitemap.config.cjs",
     "dev": "next dev",
     "start": "next start",
-    "check": "biome check .",
-    "check:unsafe": "biome check --write --unsafe .",
-    "check:write": "biome check --write .",
+    "check": "ultracite check .",
+    "check:unsafe": "ultracite fix --unsafe true .",
+    "check:write": "ultracite fix .",
     "check:links": "tsx ./scripts/lint.mts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -21,15 +21,16 @@
     "email:build": "email build",
     "email:dev": "email dev -p 3001",
     "email:export": "email export",
+    "check:spelling": "cspell -c .cspell.jsonc --no-progress --no-summary --no-must-find-files --unique --cache",
     "typegen": "fumadocs-mdx && next typegen",
     "typecheck": "pnpm run typegen && tsc --noEmit",
-    "check:spelling": "cspell -c .cspell.jsonc --no-progress --no-summary --no-must-find-files --unique --cache"
+    "prepare": "lefthook install"
   },
   "dependencies": {
     "@bprogress/next": "^3.2.12",
     "@fuma-comment/react": "^1.2.2",
     "@fuma-comment/server": "^1.2.1",
-    "@hookform/resolvers": "^4.1.3",
+    "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.0",
     "@number-flow/react": "^0.5.9",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -41,31 +42,31 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-email/components": "^0.0.34",
-    "@shikijs/transformers": "3.19.0",
+    "@react-email/components": "^1.0.4",
+    "@shikijs/transformers": "3.21.0",
     "@t3-oss/env-nextjs": "^0.13.10",
-    "@takumi-rs/image-response": "^0.57.6",
+    "@takumi-rs/image-response": "^0.62.7",
     "better-auth": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.41.0",
+    "drizzle-orm": "^0.45.1",
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "feed": "5.1.0",
-    "fumadocs-core": "16.2.4",
-    "fumadocs-docgen": "^2.0.0",
-    "fumadocs-mdx": "14.1.0",
-    "fumadocs-twoslash": "3.1.10",
-    "fumadocs-typescript": "4.0.14",
-    "fumadocs-ui": "16.2.4",
+    "fumadocs-core": "16.4.6",
+    "fumadocs-docgen": "^3.0.5",
+    "fumadocs-mdx": "14.2.4",
+    "fumadocs-twoslash": "3.1.12",
+    "fumadocs-typescript": "5.0.1",
+    "fumadocs-ui": "16.4.6",
     "hast": "1.0.0",
     "jiti": "^2.6.1",
     "katex": "0.16.27",
     "lenis": "^1.3.3",
-    "lucide-react": "0.560.0",
-    "motion": "^12.6.2",
+    "lucide-react": "0.562.0",
+    "motion": "^12.25.0",
     "next": "16.1.1",
-    "next-safe-action": "^7.10.4",
+    "next-safe-action": "^8.0.11",
     "next-sitemap": "4.2.3",
     "next-themes": "0.4.6",
     "react": "19.2.3",
@@ -77,48 +78,49 @@
     "remark": "^15.0.1",
     "remark-math": "6.0.0",
     "remark-mdx": "^3.1.0",
-    "resend": "^4.2.0",
+    "resend": "^6.7.0",
     "schema-dts": "^1.1.5",
-    "shiki": "3.19.0",
+    "shiki": "3.21.0",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tempus": "1.0.0-dev.11",
     "usehooks-ts": "^3.1.1",
-    "zod": "4.1.13"
+    "zod": "4.3.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.8",
+    "@biomejs/biome": "2.3.11",
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
     "@commitlint/types": "^20.2.0",
     "@cspell/dict-bash": "^4.2.2",
-    "cspell": "^9.4.0",
-    "lefthook": "^2.0.8",
     "@next/bundle-analyzer": "^16.1.1",
     "@tailwindcss/postcss": "4.1.18",
     "@types/mdx": "2.0.13",
-    "@types/node": "25.0.1",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/node": "24.10.7",
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
     "@types/rss": "^0.0.32",
-    "drizzle-kit": "^0.30.6",
+    "cspell": "^9.4.0",
+    "drizzle-kit": "^0.31.8",
     "fast-glob": "^3.3.3",
     "gray-matter": "^4.0.3",
+    "lefthook": "^2.0.13",
     "next-validate-link": "^1.6.4",
     "postcss": "8.5.6",
-    "react-email": "^4.0.2",
+    "react-email": "^5.2.1",
     "tailwindcss": "4.1.18",
     "tsx": "^4.19.3",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "ultracite": "7.0.11"
+  },
+  "overrides": {
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.0"
   },
-  "packageManager": "pnpm@10.7.0",
-  "overrides": {
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2"
-  }
+  "packageManager": "pnpm@10.7.0"
 }
