refactor: update default formatters, improve code structure, and enhance accessibility

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -32,7 +32,8 @@
     "rules": {
       "a11y": {
         "noSvgWithoutTitle": "off",
-        "useGenericFontNames": "off"
+        "useGenericFontNames": "off",
+        "useSemanticElements": "warn"
       },
       "correctness": {
         "useUniqueElementIds": "off"
