--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -30,5 +30,5 @@ runs:
         NEXT_PUBLIC_UMAMI_URL="https://umami.example.com"
         NEXT_PUBLIC_UMAMI_WEBSITE_ID="00000000-0000-0000-0000-000000000000"
         VERCEL_PROJECT_PRODUCTION_URL="example.vercel.app"
-        NEXT_PUBLIC_APP_URL="http://localhost:3000"
+        NEXT_PUBLIC_BASE_URL="http://localhost:3000"
         EOF
