--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@t3-oss/env-nextjs": "^0.13.10",
     "@takumi-rs/image-response": "^0.62.7",
     "better-auth": "^1.2.5",
+    "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
