--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fuma-comment/server": "^1.2.1",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.0",
+    "@next-safe-action/adapter-react-hook-form": "^2.0.0",
     "@number-flow/react": "^0.5.9",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
