--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -26,10 +26,7 @@
     "llms",
     "unrs",
     "jsxs",
-    "Arrrrr",
     "seaaa",
-    "whoosits",
-    "hewwo",
     "infty",
     "boldsymbol",
     "stackoverflow",
@@ -51,13 +48,47 @@
     "bprogress",
     "contentlayer",
     "basehub",
-    "segs",
     "shadcn",
     "fuma",
     "takumi",
     "customise",
     "firecrawl",
     "treeview",
+    "Kode",
+    "anikode",
+    "Firestore",
+    "Classnotes",
+    "Turborepo",
+    "Supabase",
+    "classnotes",
+    "Coolify",
+    "userstyle",
+    "Userstyle",
+    "userstyles",
+    "journaling",
+    "Deepgram",
+    "Maskio",
+    "maskio",
+    "Pipecat",
+    "Pipecat's",
+    "Cartesia",
+    "Gladia",
+    "Turso",
+    "botid",
+    "frimousse",
+    "Hexaa",
+    "Nelsonlai",
+    "Lazare",
+    "Rossilion",
+    "Vivek",
+    "Ganesan",
+    "Karuppiah",
+    "Energent",
+    "Keras",
+    "Vernie",
+    "nums",
+    "Sriram",
+    "BOTID",
     "intitle",
     "inurl",
     "ultracite",
@@ -77,7 +108,6 @@
     "pqoqubbw",
     "Qwik",
     "Mindstorms",
-    "NEIN",
     "SendHorizonal",
     "lerp",
     "theatrejs",
