--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,11 @@ BETTER_AUTH_SECRET=""
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 
+# Preconfigured Github OAuth provider, works out-of-the-box
+# @see https://www.better-auth.com/docs/authentication/github
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+
 # Analytics
 # Using Umami
 # @see https://umami.is
