feat: add guestbook feature (#3)
* **New Features**
  * Guestbook: post, edit/delete entries, react with emoji; emoji picker and popover; Guestbook navigation link and page; sign-in card for Google/GitHub.

* **Improvements**
  * Unified view transitions and new reveal animations; smoother cursor and UI polish; forms migrated to hook-form-driven actions; improved login redirect behavior.

* **Security**
  * Bot-detection middleware applied to key actions.

* **Chores**
  * New validators, DB schema/queries, env vars, and client middleware; tooling and lint rule updates.

--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -26,10 +26,7 @@
     "llms",
     "unrs",
     "jsxs",
-    "Arrrrr",
     "seaaa",
-    "whoosits",
-    "hewwo",
     "infty",
     "boldsymbol",
     "stackoverflow",
@@ -51,13 +48,43 @@
     "bprogress",
     "contentlayer",
     "basehub",
-    "segs",
     "shadcn",
     "fuma",
     "takumi",
     "customise",
     "firecrawl",
     "treeview",
+    "Kode",
+    "anikode",
+    "Firestore",
+    "Turborepo",
+    "Supabase",
+    "classnotes",
+    "Coolify",
+    "userstyle",
+    "userstyles",
+    "journaling",
+    "Deepgram",
+    "maskio",
+    "Pipecat",
+    "Pipecat's",
+    "Cartesia",
+    "Gladia",
+    "Turso",
+    "botid",
+    "frimousse",
+    "Hexaa",
+    "Nelsonlai",
+    "Lazare",
+    "Rossilion",
+    "Vivek",
+    "Ganesan",
+    "Karuppiah",
+    "Energent",
+    "Keras",
+    "Vernie",
+    "nums",
+    "Sriram",
     "intitle",
     "inurl",
     "ultracite",
@@ -77,7 +104,6 @@
     "pqoqubbw",
     "Qwik",
     "Mindstorms",
-    "NEIN",
     "SendHorizonal",
     "lerp",
     "theatrejs",
