--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -23,10 +23,13 @@ runs:
         RESEND_API_KEY="re_dummy_key"
         RESEND_AUDIENCE_ID="aud_dummy"
         EMAIL_FROM="blog@example.com"
+        EMAIL_TO="receiver@gmail.com"
         BETTER_AUTH_URL="http://localhost:3000"
         BETTER_AUTH_SECRET="dummy_secret"
         GOOGLE_CLIENT_ID="dummy_client_id"
         GOOGLE_CLIENT_SECRET="dummy_client_secret"
+        GITHUB_CLIENT_ID="dummy_client_id"
+        GITHUB_CLIENT_SECRET="dummy_client_secret"
         NEXT_PUBLIC_UMAMI_URL="https://umami.example.com"
         NEXT_PUBLIC_UMAMI_WEBSITE_ID="00000000-0000-0000-0000-000000000000"
         NEXT_PUBLIC_BASE_URL="http://localhost:3000"
