--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@fuma-comment/server": "^1.2.1",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.0",
+    "@next-safe-action/adapter-react-hook-form": "^2.0.0",
     "@number-flow/react": "^0.5.9",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.8",
@@ -47,6 +49,7 @@
     "@t3-oss/env-nextjs": "^0.13.10",
     "@takumi-rs/image-response": "^0.62.7",
     "better-auth": "^1.2.5",
+    "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -54,6 +57,7 @@
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "feed": "5.1.0",
+    "frimousse": "^0.3.0",
     "fumadocs-core": "16.4.6",
     "fumadocs-docgen": "^3.0.5",
     "fumadocs-mdx": "14.2.4",
