--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "hast": "1.0.0",
     "jiti": "^2.6.1",
     "katex": "0.16.27",
+    "lenis": "^1.3.17",
     "lucide-react": "0.562.0",
     "mime-types": "^3.0.2",
     "motion": "^12.26.2",
@@ -91,6 +92,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "tempus": "1.0.0-dev.17",
     "usehooks-ts": "^3.1.1",
     "zod": "4.3.5"
   },
