--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,8 @@ NEXT_PUBLIC_UMAMI_WEBSITE_ID="" # Website ID of your Umami instance
 # Application Production URL
 # Used for redirecting the user to the login / signup page of the application
 NEXT_PUBLIC_BASE_URL=""
+
+# GitHub Personal Access Token
+# Used for fetching GitHub activity in the About page feed
+# @see https://github.com/settings/tokens
+GITHUB_TOKEN="github_pat_" # GitHub Personal Access Token (classic)
