--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@neondatabase/serverless": "^1.0.2",
     "@next-safe-action/adapter-react-hook-form": "^2.0.0",
     "@number-flow/react": "^0.5.10",
+    "@octokit/rest": "^22.0.1",
+    "@primer/octicons-react": "^19.21.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
