--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "next-safe-action": "^8.0.11",
     "next-sitemap": "4.2.3",
     "next-themes": "0.4.6",
+    "nuqs": "^2.8.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-fast-marquee": "^1.6.5",
