--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@cspell/dict-bash": "^4.2.2",
     "@next/bundle-analyzer": "^16.1.1",
     "@tailwindcss/postcss": "4.1.18",
+    "@types/hast": "^3.0.4",
     "@types/mdx": "2.0.13",
     "@types/mime-types": "^3.0.1",
     "@types/node": "24.10.7",
