chore: update cspell configuration and correct typo in TODO list for improved clarity

--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -108,6 +108,10 @@
     "lerp",
     "theatrejs",
     "netcat",
-    "daveyplate"
+    "daveyplate",
+    "jace",
+    "Nuqs",
+    "nuqs",
+    "Posthog"
   ]
 }
