--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "next-safe-action": "^8.0.11",
     "next-sitemap": "4.2.3",
     "next-themes": "0.4.6",
+    "nuqs": "^2.8.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-fast-marquee": "^1.6.5",
@@ -104,6 +105,7 @@
     "@cspell/dict-bash": "^4.2.2",
     "@next/bundle-analyzer": "^16.1.1",
     "@tailwindcss/postcss": "4.1.18",
+    "@types/hast": "^3.0.4",
     "@types/mdx": "2.0.13",
     "@types/mime-types": "^3.0.1",
     "@types/node": "24.10.7",
