refactor: update GitHub activity feed to display recent commits instead of events

--- a/.env.example
+++ b/.env.example
@@ -50,4 +50,4 @@ NEXT_PUBLIC_BASE_URL=""
 # GitHub Personal Access Token
 # Used for fetching GitHub activity in the About page feed
 # @see https://github.com/settings/tokens
-GITHUB_TOKEN="github_pat_" # GitHub Personal Access Token (classic)
+GITHUB_TOKEN="github_pat_"
