--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -115,6 +115,12 @@
     "Posthog",
     "Zaid",
     "Mukkadam",
-    "Jahir"
+    "Jahir",
+    "svgl",
+    "Gollum",
+    "Expressjs",
+    "expressjs",
+    "brandoncoyr",
+    "Janky"
   ]
 }
