--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,82 +1,113 @@
 {
-  "name": "Node.js & TypeScript",
   "build": {
-    "dockerfile": "Dockerfile"
+    "dockerfile": "./Dockerfile",
+    "context": "."
   },
-  // Add more features. See complete list https://github.com/devcontainers/features
   "features": {
-    "ghcr.io/devcontainers/features/git:1": {
-      "version": "latest",
-      "ppa": "false"
-    },
     "ghcr.io/devcontainers/features/common-utils:2": {
-      "installZsh": true,
-      "configureZshAsDefaultShell": true,
-      "installOhMyZsh": true,
-      "installOhMyZshConfig": true
+      "username": "coder",
+      "userUid": "1000",
+      "userGid": "1000"
     },
-    "ghcr.io/devcontainers/features/github-cli:1": {}
-  },
-  // Configure tool-specific properties.
-  "customizations": {
-    // Configure properties specific to VS Code.
-    "vscode": {
-      // Add the IDs of extensions you want installed when the container is created.
-      "extensions": [
-        // TypeScript
-        "bierner.lit-html",
-        "better-ts-errors.better-ts-errors",
-        // Makefile
-        "ms-vscode.makefile-tools",
-        // Markdown
-        "bierner.markdown-preview-github-styles",
-        "bierner.markdown-emoji",
-        "bierner.markdown-checkbox",
-        "bierner.jsdoc-markdown-highlighting",
-        "ms-vscode.wordcount",
-        // Other
-        "albert.tabout",
-        "streetsidesoftware.code-spell-checker",
-        "bierner.comment-tagged-templates",
-        "dbaeumer.vscode-eslint"
-      ],
-      "settings": {
-        // "terminal.integrated.defaultProfile.linux": "zsh",
-        "debug.internalConsoleOptions": "neverOpen",
-        "editor.formatOnPaste": true,
-        "editor.guides.bracketPairs": "active",
-        "scm.defaultViewMode": "tree",
-        "diffEditor.diffAlgorithm": "advanced",
-        "diffEditor.experimental.showMoves": true,
-        "diffEditor.renderSideBySide": false,
-        "files.watcherExclude": {
-          "**/node_modules/**": true
-        },
-        // Prettifies the response with emojis and such.
-        "betterTypeScriptErrors.prettify": true,
-        "github.copilot.chat.codeGeneration.instructions": [
-          {
-            "text": "This dev container includes the TypeScript compiler (`tsc`) pre-installed and available on the `PATH` for TypeScript development."
-          }
-        ]
-      }
+    "ghcr.io/devcontainers/features/git:1": {
+      "version": "os-provided"
+    },
+    "ghcr.io/devcontainers/features/node:1": {
+      "version": "24",
+      "additionalVersions": "22"
+    },
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "os-provided"
+    },
+    "ghcr.io/devcontainers/features/git-lfs:1": {
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/github-cli:1": {
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {
+      "version": "latest",
+      "moby": "false"
+    },
+    "ghcr.io/devcontainers-extra/features/bun:1": {
+      "version": "latest"
+    },
+    "ghcr.io/coder/devcontainer-features/code-server:1": {
+      "auth": "none",
+      "port": 13337
     }
   },
-  // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [
-    // Http
-    3000
+  "overrideFeatureInstallOrder": [
+    "ghcr.io/devcontainers/features/common-utils",
+    "ghcr.io/devcontainers/features/git",
+    "ghcr.io/devcontainers/features/node",
+    "ghcr.io/devcontainers-extra/features/bun",
+    "ghcr.io/devcontainers/features/python",
+    "ghcr.io/devcontainers/features/git-lfs",
+    "ghcr.io/devcontainers/features/github-cli",
+    "ghcr.io/devcontainers/features/docker-in-docker",
+    "ghcr.io/coder/devcontainer-features/code-server",
+    "./local-features/setup-user"
   ],
-  // Use 'portsAttributes' to set default properties for specific forwarded ports.
-  // More info: https://containers.dev/implementors/json_reference/#port-attributes
-  "portsAttributes": {
-    "3000": {
-      "label": "Web",
-      "onAutoForward": "notify"
+  "remoteUser": "coder",
+  "containerUser": "coder",
+  "customizations": {
+    "vscode": {
+      "extensions": ["biomejs.biome"],
+      "settings": {
+        "python.defaultInterpreterPath": "/home/coder/.python/current/bin/python3"
+      }
+    },
+    "coder": {
+      "apps": [
+        {
+          "slug": "cursor",
+          "displayName": "Cursor Desktop",
+          "url": "cursor://coder.coder-remote/openDevContainer?owner=${localEnv:CODER_WORKSPACE_OWNER_NAME}&workspace=${localEnv:CODER_WORKSPACE_NAME}&agent=${localEnv:CODER_WORKSPACE_PARENT_AGENT_NAME}&url=${localEnv:CODER_URL}&token=$SESSION_TOKEN&devContainerName=${localEnv:CONTAINER_ID}&devContainerFolder=${containerWorkspaceFolder}&localWorkspaceFolder=${localWorkspaceFolder}",
+          "external": true,
+          "icon": "/icon/cursor.svg",
+          "order": 1
+        },
+        {
+          "slug": "windsurf",
+          "displayName": "Windsurf Editor",
+          "url": "windsurf://coder.coder-remote/openDevContainer?owner=${localEnv:CODER_WORKSPACE_OWNER_NAME}&workspace=${localEnv:CODER_WORKSPACE_NAME}&agent=${localEnv:CODER_WORKSPACE_PARENT_AGENT_NAME}&url=${localEnv:CODER_URL}&token=$SESSION_TOKEN&devContainerName=${localEnv:CONTAINER_ID}&devContainerFolder=${containerWorkspaceFolder}&localWorkspaceFolder=${localWorkspaceFolder}",
+          "external": true,
+          "icon": "/icon/windsurf.svg",
+          "order": 4
+        },
+        {
+          "slug": "zed",
+          "displayName": "Zed Editor",
+          "url": "zed://ssh/${localEnv:CODER_WORKSPACE_AGENT_NAME}.${localEnv:CODER_WORKSPACE_NAME}.${localEnv:CODER_WORKSPACE_OWNER_NAME}.coder${containerWorkspaceFolder}",
+          "external": true,
+          "icon": "/icon/zed.svg",
+          "order": 5
+        },
+        {
+          "slug": "code-server",
+          "displayName": "code-server",
+          "url": "http://${localEnv:FEATURE_CODE_SERVER_OPTION_HOST:127.0.0.1}:${localEnv:FEATURE_CODE_SERVER_OPTION_PORT:8080}/?folder=${containerWorkspaceFolder}",
+          "openIn": "${localEnv:FEATURE_CODE_SERVER_OPTION_APPOPENIN:slim-window}",
+          "share": "${localEnv:FEATURE_CODE_SERVER_OPTION_APPSHARE:owner}",
+          "icon": "/icon/code.svg",
+          "group": "${localEnv:FEATURE_CODE_SERVER_OPTION_APPGROUP:Web Editors}",
+          "order": 3,
+          "healthCheck": {
+            "url": "http://${localEnv:FEATURE_CODE_SERVER_OPTION_HOST:127.0.0.1}:${localEnv:FEATURE_CODE_SERVER_OPTION_PORT:8080}/healthz",
+            "interval": 5,
+            "threshold": 2
+          }
+        }
+      ]
     }
   },
-  // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "export COREPACK_ENABLE_DOWNLOAD_PROMPT=0 && pnpm install",
-  // Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  "remoteUser": "node"
+  "mounts": [
+    "source=coder-coder-devcontainer-home,target=/home/coder,type=volume",
+    "source=${localEnv:HOME},target=/mnt/home/coder,type=bind,readonly"
+  ],
+  "postStartCommand": {
+    "docker": "sudo service docker start"
+  },
+  "postCreateCommand": ["./.devcontainer/scripts/post_create.sh"]
 }
