refactor: update software logos and remove unused SVGs

--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -121,6 +121,31 @@
     "Expressjs",
     "expressjs",
     "brandoncoyr",
-    "Janky"
+    "Janky",
+    "Antinote",
+    "Braydon",
+    "Chanh",
+    "Comeau",
+    "Downie",
+    "Eververse",
+    "Ghostty",
+    "Goodnotes",
+    "Ingo",
+    "Kolkata",
+    "Kowalski",
+    "MITTLED",
+    "RODRET",
+    "TRADFRI",
+    "Termius",
+    "Dropover",
+    "IINA",
+    "Typefully",
+    "Vesktop",
+    "Wispr",
+    "Yaak",
+    "cursorrules",
+    "hexaaa",
+    "macbook",
+    "mittled"
   ]
 }
