--- a/.devcontainer/local-features/setup-user/devcontainer-feature.json
+++ b/.devcontainer/local-features/setup-user/devcontainer-feature.json
@@ -3,10 +3,8 @@
   "name": "Setup user configs",
   "containerEnv": {
     "NODE_ROOT": "/home/coder/nvm",
-    "PYTHON_ROOT": "/home/coder/.python",
-    "PYTHONIOENCODING": "UTF-8",
     "NPM_GLOBAL": "/home/coder/.npm-global",
-    "PATH": "/home/coder/nvm/current/bin:/home/coder/.python/current/bin:/home/coder/.local/bin:${PATH}"
+    "PATH": "/home/coder/nvm/current/bin:/home/coder/.local/bin:${PATH}"
   },
   "install": {
     "app": "",
