--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,17 +4,8 @@
     "context": "."
   },
   "features": {
-    "ghcr.io/devcontainers/features/common-utils:2": {
-      "username": "coder",
-      "userUid": "1000",
-      "userGid": "1000"
-    },
     "ghcr.io/devcontainers/features/git:1": {
       "version": "os-provided"
-    },
-    "ghcr.io/devcontainers/features/node:1": {
-      "version": "24",
-      "additionalVersions": "22"
     },
     "ghcr.io/devcontainers/features/github-cli:1": {
       "version": "latest"
@@ -29,15 +20,16 @@
     "ghcr.io/coder/devcontainer-features/code-server:1": {
       "auth": "none",
       "port": 13337
-    }
+    },
+    "ghcr.io/anthropics/devcontainer-features/claude-code:1": {}
   },
   "overrideFeatureInstallOrder": [
     "ghcr.io/devcontainers/features/common-utils",
     "ghcr.io/devcontainers/features/git",
-    "ghcr.io/devcontainers/features/node",
     "ghcr.io/devcontainers-extra/features/bun",
     "ghcr.io/devcontainers/features/github-cli",
     "ghcr.io/devcontainers/features/docker-in-docker",
+    "ghcr.io/anthropics/devcontainer-features/claude-code",
     "ghcr.io/coder/devcontainer-features/code-server",
     "./local-features/setup-user"
   ],
@@ -45,7 +37,7 @@
   "containerUser": "coder",
   "customizations": {
     "vscode": {
-      "extensions": ["biomejs.biome"]
+      "extensions": ["biomejs.biome", "anthropic.claude-code"]
     },
     "coder": {
       "apps": [
@@ -98,5 +90,5 @@
   "postStartCommand": {
     "docker": "sudo service docker start"
   },
-  "postCreateCommand": ["./.devcontainer/scripts/post_create.sh"]
+  "postCreateCommand": ["./.devcontainer/scripts/post-create.sh"]
 }
