--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,11 @@
     "context": "."
   },
   "features": {
-    "ghcr.io/devcontainers/features/common-utils:2": {
-      "username": "coder",
-      "userUid": "1000",
-      "userGid": "1000"
-    },
+		"ghcr.io/devcontainers/features/common-utils:2": {
+			"installZsh": "true",
+			"username": "coder",
+			"upgradePackages": "true"
+		},
     "ghcr.io/devcontainers/features/node:1": {
 			"version": "none"
 		},
