feat: update devcontainer configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -99,5 +99,6 @@
   ],
   "postStartCommand": {
     "docker": "sudo service docker start"
-  }
+  },
+  "postCreateCommand": ["./.devcontainer/scripts/post-create.sh"]
 }
