feat(blog): restructure blog components and add newsletter functionality
- Remove the old Hero component from the newsletter section.
- Introduce a new Header component for blog posts with improved layout and animations.
- Create a client-side page for handling post comments and sharing functionality.
- Implement a new page structure for individual blog posts, including metadata generation.
- Add a new Hero component for the main blog page with post count display.
- Develop a newsletter form component with validation and success/error handling.
- Create a newsletter section to encourage subscriptions.
- Implement a tags sidebar and accordion for better navigation through blog tags.
- Add server-side actions for newsletter subscription management.
- Create an RSS feed for blog posts.
- Implement a tags page with a hero section and tag cards for better organization.
- Update the search component for improved styling.
- Refactor provider settings for authentication.
- Fix import paths in MDX layout for consistency.

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -4,16 +4,13 @@ description: "Common setup steps for Actions"
 runs:
   using: composite
   steps:
-    - uses: pnpm/action-setup@v4
-    - uses: actions/setup-node@v6
-      with:
-        node-version-file: ".nvmrc"
+    - uses: oven-sh/setup-bun@v2
 
     - shell: bash
-      run: pnpm add -g turbo
+      run: bun add -g turbo
 
     - shell: bash
-      run: pnpm install
+      run: bun install
 
     - name: Create environment variables file
       shell: bash
