fix: adjust className

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,9 +1,9 @@
 post-merge:
   commands:
     install-deps:
-      run: pnpm install
+      run: bun install
 
 commit-msg:
   commands:
     "lint commit message":
-      run: pnpm commitlint --edit {1}
+      run: bun commitlint --edit {1}
