--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "prepare": "lefthook install"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.19",
+    "@ai-sdk/react": "^3.0.51",
     "@bprogress/next": "^3.2.12",
     "@daveyplate/better-auth-ui": "^3.3.15",
     "@fuma-comment/react": "^1.4.0",
@@ -52,6 +54,7 @@
     "@shikijs/transformers": "3.21.0",
     "@t3-oss/env-nextjs": "^0.13.10",
     "@takumi-rs/image-response": "^0.65.0",
+    "ai": "^6.0.49",
     "better-auth": "^1.4.17",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
@@ -72,7 +75,7 @@
     "jiti": "^2.6.1",
     "katex": "0.16.27",
     "lenis": "^1.3.17",
-    "lucide-react": "0.563.0",
+    "lucide-react": "^0.563.0",
     "mime-types": "^3.0.2",
     "motion": "^12.29.0",
     "next": "16.1.4",
