feat: migrate sitemap configuration to TypeScript and update tsconfig for extension imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@/*": ["./src/*"],
       "@/public/*": ["./public/*"],
       "fumadocs-mdx:collections/*": ["./.source/*"]
-    }
+    },
+    "allowImportingTsExtensions": true
   },
   "include": [
     ".eslintrc.cjs",
