feat: add OpenAI API key to .env.example and improve localStorage handling in AI components

--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,7 @@ NEXT_PUBLIC_BASE_URL=""
 # Used for fetching GitHub activity in the About page feed
 # @see https://github.com/settings/tokens
 GITHUB_TOKEN="github_pat_"
+
+# OpenAI
+# Used for AI chat functionality
+OPENAI_API_KEY=""
