--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "fumadocs-mdx",
     "build": "next build",
     "preview": "next build && next start",
-    "postbuild": "next-sitemap --config next-sitemap.config.cjs",
+    "postbuild": "next-sitemap --config next-sitemap.config.ts",
     "dev": "next dev",
     "start": "next start",
     "check": "ultracite check .",
