feat: update event listener types to use RefObject for improved type safety

--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -148,6 +148,17 @@
     "macbook",
     "mittled",
     "chanhdai",
-    "fumacomment"
+    "fumacomment",
+    "clippyts",
+    "clippy",
+    "Clippy",
+    "Bonzi",
+    "bonzi",
+    "BONZI",
+    "Peedy",
+    "peedy",
+    "PEEDY",
+    "CLIPPY",
+    "heya"
   ]
 }
