--- a/package.json
+++ b/package.json
@@ -41,25 +41,33 @@
     "@primer/octicons-react": "^19.21.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^1.0.6",
     "@shikijs/transformers": "3.21.0",
+    "@streamdown/cjk": "^1.0.1",
+    "@streamdown/code": "^1.0.1",
+    "@streamdown/math": "^1.0.1",
+    "@streamdown/mermaid": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.13.10",
     "@takumi-rs/image-response": "^0.65.0",
-    "ai": "^6.0.49",
+    "ai": "^6.0.59",
     "better-auth": "^1.4.17",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
     "clippyts": "^1.0.4",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
     "embla-carousel-auto-scroll": "^8.6.0",
@@ -79,6 +87,7 @@
     "lucide-react": "^0.563.0",
     "mime-types": "^3.0.2",
     "motion": "^12.29.0",
+    "nanoid": "^5.1.6",
     "next": "16.1.4",
     "next-safe-action": "^8.0.11",
     "next-sitemap": "4.2.3",
@@ -97,10 +106,12 @@
     "schema-dts": "^1.1.5",
     "shiki": "3.21.0",
     "sonner": "^2.0.7",
+    "streamdown": "^2.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tempus": "1.0.0-dev.17",
+    "use-stick-to-bottom": "^1.1.2",
     "usehooks-ts": "^3.1.1",
     "zod": "4.3.6"
   },
