feat: implement signature functionality

--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,8 @@ GITHUB_TOKEN="github_pat_"
 # OpenAI
 # Used for AI chat functionality
 OPENAI_API_KEY=""
+
+# Vercel Blob
+# Used for storing images uploaded via the Guestbook
+# @see https://vercel.com/blob
+BLOB_READ_WRITE_TOKEN=""
