--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@shikijs/transformers": "3.21.0",
     "@t3-oss/env-nextjs": "^0.13.10",
     "@takumi-rs/image-response": "^0.65.0",
+    "@vercel/blob": "^2.1.0",
     "ai": "^6.0.49",
     "better-auth": "^1.4.17",
     "botid": "^1.5.10",
