feat: add guestbook entry management feature

--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,10 @@ GITHUB_TOKEN="github_pat_"
 # Used for AI chat functionality
 OPENAI_API_KEY=""
 
+# Google Generative AI
+# Used for Moderation
+GOOGLE_GENERATIVE_AI_API_KEY=""
+
 # Vercel Blob
 # Used for storing images uploaded via the Guestbook
 # @see https://vercel.com/blob
