--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prepare": "lefthook install"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.21",
     "@ai-sdk/openai": "^3.0.19",
     "@ai-sdk/react": "^3.0.51",
     "@bprogress/next": "^3.2.12",
@@ -85,6 +86,7 @@
     "next-sitemap": "4.2.3",
     "next-themes": "0.4.6",
     "nuqs": "^2.8.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-fast-marquee": "^1.6.5",
