feat: update guestbook modals to handle busy state and improve user experience
- Added `@radix-ui/react-dialog` dependency for dialog management.
- Refactored `BanUserModal` and `DeleteEntryModal` to disable actions and prevent closing when busy.
- Improved action labels based on user state in both modals.
- Updated `GuestbookEntryCard` styles for better responsiveness.
- Enhanced guestbook entry creation logic to handle signature validation.
- Modified moderation logic to ensure robust error handling and response.
- Cleaned up imports and code formatting across various files for consistency.

--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -160,6 +160,20 @@
     "PEEDY",
     "CLIPPY",
     "heya",
-    "pawsome"
+    "pawsome",
+    "openrouter",
+    "unban",
+    "spammy",
+    "hackclub",
+    "Suraj",
+    "Kinfish",
+    "Enscribe",
+    "Rada",
+    "Dunnagan",
+    "shih",
+    "awoo",
+    "hooman",
+    "dokie",
+    "hiyaaaa"
   ]
 }
