--- a/.env.example
+++ b/.env.example
@@ -56,9 +56,9 @@ GITHUB_TOKEN="github_pat_"
 # Used for AI chat functionality
 OPENAI_API_KEY=""
 
-# Google Generative AI
-# Used for Moderation
-GOOGLE_GENERATIVE_AI_API_KEY=""
+# Hack Club
+# Used for AI moderation via OpenRouter proxy
+HACKCLUB_API_KEY=""
 
 # Vercel Blob
 # Used for storing images uploaded via the Guestbook
