--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@primer/octicons-react": "^19.21.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
@@ -87,7 +88,6 @@
     "next-sitemap": "4.2.3",
     "next-themes": "0.4.6",
     "nuqs": "^2.8.6",
-    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-fast-marquee": "^1.6.5",
