--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@next-safe-action/adapter-react-hook-form": "^2.0.0",
     "@number-flow/react": "^0.5.11",
     "@octokit/rest": "^22.0.1",
+    "@openrouter/ai-sdk-provider": "^2.1.1",
     "@primer/octicons-react": "^19.21.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
@@ -56,6 +58,7 @@
     "@takumi-rs/image-response": "^0.65.0",
     "@vercel/blob": "^2.1.0",
     "ai": "^6.0.49",
+    "ai-retry": "^1.2.0",
     "better-auth": "^1.4.17",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
