--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -14,6 +14,11 @@
     "shiki",
     "shikijs",
     "turbopack",
+    "Slimdown",
+    "honghong",
+    "chromeos",
+    "cros",
+    "chrom",
     "remark",
     "katex",
     "lefthook",
