--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@openrouter/ai-sdk-provider": "^2.1.1",
     "@primer/octicons-react": "^19.21.2",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
