feat: remove dead dependencies from package.json and bun.lock (#27)
* feat: remove dead dependencies from package.json and bun.lock

* refactor: remove @daveyplate/better-auth-ui and replace with custom components

- Deleted references to @daveyplate/better-auth-ui in account and auth pages.
- Introduced AccountSettings component for managing user account settings.
- Created SignInCard component for user login functionality.
- Updated user authentication flow to use custom hooks and components.
- Refactored guestbook form to handle user authentication with custom login links.
- Removed unused CSS imports related to @daveyplate/better-auth-ui.
- Enhanced user avatar and button components for better integration.

* feat: add active sessions management and account name editing functionality

* feat: add session summary and optimize account page with custom components

* feat: enhance account settings and active sessions components with improved UI and functionality

* feat: enhance accessibility by adding aria-labels to UserButton and Clock components

* feat: enhance account and login pages with metadata generation and improved sign-in functionality

* chore: cleanup code

* feat: implement session management with revoke functionality and optimize active sessions display

* fix: remove md

* feat: remove

* feat: implement session management and revoke functionality with UI components

* feat: optimize revoke session action and update sign-in button styles

* feat: update skeleton components for improved layout and styling

* feat: refactor session sorting logic for improved readability and performance

* feat: optimize session caching by simplifying getSessionCached implementation

* feat: consolidate user agent parsing into active sessions component

* feat: add AlertDialog component and integrate into account settings

* feat: replace date formatting with date-fns for improved consistency

* feat: enhance date formatting in active sessions and adjust skeleton compo

--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -14,6 +14,11 @@
     "shiki",
     "shikijs",
     "turbopack",
+    "Slimdown",
+    "honghong",
+    "chromeos",
+    "cros",
+    "chrom",
     "remark",
     "katex",
     "lefthook",
@@ -162,6 +167,7 @@
     "heya",
     "pawsome",
     "openrouter",
+    "bowser",
     "unban",
     "spammy",
     "hackclub",
