--- a/package.json
+++ b/package.json
@@ -30,21 +30,19 @@
     "@ai-sdk/openai": "^3.0.19",
     "@ai-sdk/react": "^3.0.51",
     "@bprogress/next": "^3.2.12",
-    "@daveyplate/better-auth-ui": "^3.3.15",
     "@fuma-comment/react": "^1.4.0",
     "@fuma-comment/server": "^1.4.0",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
     "@next-safe-action/adapter-react-hook-form": "^2.0.0",
-    "@number-flow/react": "^0.5.11",
     "@octokit/rest": "^22.0.1",
     "@openrouter/ai-sdk-provider": "^2.1.1",
     "@primer/octicons-react": "^19.21.2",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -61,6 +59,7 @@
     "ai-retry": "^1.2.0",
     "better-auth": "^1.4.17",
     "botid": "^1.5.10",
+    "bowser": "^2.13.1",
     "class-variance-authority": "^0.7.1",
     "clippyts": "^1.0.4",
     "clsx": "^2.1.1",
@@ -90,7 +89,6 @@
     "nuqs": "^2.8.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.71.0",
     "react-wrap-balancer": "^1.1.1",
     "rehype-katex": "7.0.1",
